Pendiente de hacer fragment para otra actividad de Moguda, pendiente de hacer:  Moguda ext,- assistents   5.- perfil   6.- perfil2   8.- Escola   9.- Escola 2  11.- profes  17.- calendar  18.- filtres

--- a/app/src/main/res/layout/activity_novetats.xml
+++ b/app/src/main/res/layout/activity_novetats.xml
@@ -65,14 +65,14 @@
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/profilefoto1"
-                android:textSize="15sp"
+                android:textSize="19sp"
                 android:layout_marginLeft="10sp"
                 android:padding="10sp"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/edittext1"
+                android:id="@+id/hinttext1"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/txtview1"
@@ -80,6 +80,7 @@
                 android:layout_marginLeft="70dp"
                 />
             <ImageView
+                android:id="@+id/flecha1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -88,11 +89,11 @@
                 />
             <View
                 android:id="@+id/linea1"
-                android:layout_below="@id/edittext1"
+                android:layout_below="@id/hinttext1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/colorLinea"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="15dp"/>
 
             <ImageView
                 android:layout_below="@id/linea1"
@@ -108,11 +109,175 @@
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/profilefoto2"
-                android:textSize="15sp"
+                android:textSize="19sp"
                 android:layout_marginLeft="10sp"
                 android:padding="10sp"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black" />
+
+            <ImageView
+                android:id="@+id/flecha2"
+                android:layout_below="@id/linea1"
+                android:layout_toRightOf="@id/txtview2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/baseline_forward"/>
+            <TextView
+                android:id="@+id/hinttext2"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_below="@+id/txtview2"
+                android:hint="Fa 10 hores"
+                android:layout_marginLeft="70dp"
+                />
+            <View
+                android:id="@+id/linea2"
+                android:layout_below="@id/hinttext2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorLinea"
+                android:layout_marginTop="15dp"/>
+            <ImageView
+                android:layout_below="@id/linea2"
+                android:id="@+id/profilefoto3"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_marginTop="20sp"
+                android:src="@drawable/weswingicpetit" />
+
+            <TextView
+                android:layout_below="@id/linea2"
+                android:id="@+id/txtview3"
+                android:layout_width="320dp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/profilefoto2"
+                android:textSize="19sp"
+                android:layout_marginLeft="10sp"
+                android:padding="10sp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black" />
+
+            <ImageView
+                android:id="@+id/flecha3"
+                android:layout_below="@id/linea2"
+                android:layout_toRightOf="@id/txtview2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/baseline_forward"/>
+            <TextView
+                android:id="@+id/hinttext3"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_below="@+id/txtview3"
+                android:hint="Fa 10 hores"
+                android:layout_marginLeft="70dp"
+                />
+            <View
+                android:id="@+id/linea3"
+                android:layout_below="@id/hinttext3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorLinea"
+                android:layout_marginTop="15dp"/>
+            <ImageView
+                android:layout_below="@id/linea3"
+                android:id="@+id/profilefoto4"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_marginTop="20sp"
+                android:src="@drawable/weswingicpetit" />
+
+            <TextView
+                android:layout_below="@id/linea3"
+                android:id="@+id/txtview4"
+                android:layout_width="320dp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/profilefoto2"
+                android:textSize="19sp"
+                android:layout_marginLeft="10sp"
+                android:padding="10sp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black" />
+
+            <ImageView
+                android:layout_below="@id/linea3"
+                android:layout_toRightOf="@id/txtview4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/baseline_forward"/>
+            <TextView
+                android:id="@+id/hinttext4"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_below="@+id/txtview4"
+                android:hint="Fa 10 hores"
+                android:layout_marginLeft="70dp"
+                />
+            <View
+                android:id="@+id/linea4"
+                android:layout_below="@id/hinttext4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorLinea"
+                android:layout_marginTop="15dp"/>
+            <ImageView
+                android:layout_below="@id/linea4"
+                android:id="@+id/profilefoto5"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_marginTop="20sp"
+                android:src="@drawable/weswingicpetit" />
+
+            <TextView
+                android:layout_below="@id/linea4"
+                android:id="@+id/txtview5"
+                android:layout_width="320dp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/profilefoto5"
+                android:textSize="19sp"
+                android:layout_marginLeft="10sp"
+                android:padding="10sp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black" />
+
+            <ImageView
+                android:id="@+id/flecha4"
+                android:layout_below="@id/linea3"
+                android:layout_toRightOf="@id/txtview5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/baseline_forward"/>
+            <TextView
+                android:id="@+id/hinttext5"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_below="@+id/txtview5"
+                android:hint="Fa 10 hores"
+                android:layout_marginLeft="70dp"
+                />
+            <View
+                android:id="@+id/linea5"
+                android:layout_below="@id/hinttext4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorLinea"
+                android:layout_marginTop="15dp"/>
+
+
+
+
+
+
+
+
 
 
 
