--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Registro"
-    android:background="#B0AD96">
+    android:background="#d7d3c7">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:background="?attr/colorPrimary"
         app:titleTextColor="@android:color/white"
         app:layout_constraintBaseline_toBottomOf="parent"
-        android:backgroundTint="@color/rojo">
+        android:backgroundTint="#a24845">
 
         <ImageButton
             android:id="@+id/btn_back"
@@ -49,7 +49,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#B0AD96"
+            android:background="#fbf8ef"
             android:orientation="vertical">
 
             <TextView
@@ -238,7 +238,7 @@
         app:layout_constraintTop_toBottomOf="@+id/scrollviewregistro"
         android:textOn="REGISTER"
         android:textOff="REGISTER"
-        android:background="@color/rojo"
+        android:background="#a24845"
         android:textColor="@color/white"
         android:textSize="30dp"/>
     </LinearLayout>
