Con moguda añadida.

--- a/app/src/main/res/layout/activity_novetats.xml
+++ b/app/src/main/res/layout/activity_novetats.xml
@@ -44,9 +44,10 @@
     <ScrollView
         android:id="@+id/scrollviewregistro"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="75sp"
+        android:layout_height="0dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
         tools:ignore="MissingConstraints">
 
         <RelativeLayout
@@ -277,16 +278,14 @@
 
     <!-- Barra de navegación -->
     <LinearLayout
+        android:id="@+id/navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="164dp"
+        android:gravity="bottom"
         android:background="#e7e2d7"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollviewregistro">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <!-- Iconos de navegación -->
         <ImageButton
@@ -305,7 +304,7 @@
             android:layout_weight="1"
             android:background="?attr/selectableItemBackground"
             android:src="@drawable/ic_news"
-            app:tint="#9b9892"/>
+            app:tint="#9b9892" />
 
         <ImageButton
             android:id="@+id/navigation_notifications"
